[gd_scene load_steps=10 format=3 uid="uid://rmixql5wbq8s"]

[ext_resource type="Script" path="res://World/levelmain.gd" id="1_0ho5g"]
[ext_resource type="PackedScene" uid="uid://lsni7bco1t7t" path="res://entities/player/player.tscn" id="1_hyipm"]
[ext_resource type="TileSet" uid="uid://berok1m7cgn75" path="res://TileMap/MapGame.tres" id="3_cebt2"]
[ext_resource type="Script" path="res://addons/word/resources/itemResource.gd" id="3_n54hw"]
[ext_resource type="Resource" uid="uid://tjgcx51yrthv" path="res://entities/items/door/door.tres" id="4_b4gcv"]
[ext_resource type="Resource" uid="uid://bbgx4p42i6pqh" path="res://entities/items/teleporter/teleporter.tres" id="6_ho341"]
[ext_resource type="Resource" uid="uid://dxmu6bmob77dy" path="res://entities/items/box/box.tres" id="10_avjfs"]
[ext_resource type="Resource" path="res://entities/items/button/button.tres" id="12_lmhi6"]
[ext_resource type="Resource" path="res://entities/items/logicGate/iitemLogic.tres" id="13_4pdc5"]

[node name="level0" type="Node2D"]
script = ExtResource("1_0ho5g")

[node name="Player" parent="." instance=ExtResource("1_hyipm")]
position = Vector2(94, 191)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_cebt2")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 131072, 0, 1, 65536, 0, 65538, 458752, 0, 2, 524288, 0, 65539, 458752, 0, 3, 524288, 0, 4, 524288, 0, 5, 524288, 0, 65551, 458752, 0, 15, 524288, 0, 65550, 458752, 0, 14, 524288, 0, 65549, 458752, 0, 13, 524288, 0, 65548, 458752, 0, 12, 524288, 0, 65547, 458752, 0, 11, 524288, 0, 65546, 458752, 0, 10, 524288, 0, 65545, 458752, 0, 9, 524288, 0, 65544, 1, 0, 8, 524288, 0, 65543, 458752, 0, 7, 524288, 0, 65542, 458752, 0, 6, 524288, 0, 65541, 458752, 0, 65540, 458752, 0, 16, 524288, 0, 65552, 458752, 0, 65553, 458752, 0, 17, 524288, 0, 65554, 458752, 0, 18, 524288, 0, 65555, 458752, 0, 19, 524288, 0, 65556, 458752, 0, 20, 524288, 0, 65557, 196608, 0, 21, 262144, 0, 65558, 1441792, 0, 131094, 65536, 0, 196630, 131072, 0, 22, 851968, 0, 65536, 983040, 0, 131072, 983040, 0, 196608, 983040, 0, 262144, 983040, 0, 327680, 983040, 0, 393216, 983040, 0, 0, 1114112, 0, 131073, 1179648, 0, 196609, 1245184, 0, 262145, 1245184, 0, 327681, 1245184, 0, 393217, 1245184, 0, 458753, 1179648, 0, 131074, 1245184, 0, 196610, 1245184, 0, 262146, 1245184, 0, 327682, 1245184, 0, 393218, 1245184, 0, 458754, 1245184, 0, 131075, 1245184, 0, 196611, 1245184, 0, 262147, 1245184, 0, 327683, 1245184, 0, 393219, 1245184, 0, 458755, 1245184, 0, 131076, 1179648, 0, 196612, 1245184, 0, 262148, 1245184, 0, 327684, 1245184, 0, 393220, 1245184, 0, 458756, 1179648, 0, 131077, 1245184, 0, 196613, 1245184, 0, 262149, 1245184, 0, 327685, 1245184, 0, 393221, 1245184, 0, 458757, 1245184, 0, 131078, 1245184, 0, 196614, 1245184, 0, 262150, 1245184, 0, 327686, 1245184, 0, 393222, 1245184, 0, 458758, 1245184, 0, 131079, 1179648, 0, 196615, 1245184, 0, 262151, 1245184, 0, 327687, 1245184, 0, 393223, 1245184, 0, 458759, 1179648, 0, 131080, 1245184, 0, 196616, 1245184, 0, 262152, 1245184, 0, 327688, 1245184, 0, 393224, 1245184, 0, 458760, 1245184, 0, 131081, 1245184, 0, 196617, 1245184, 0, 262153, 1245184, 0, 327689, 1245184, 0, 393225, 1245184, 0, 458761, 1245184, 0, 131082, 1179648, 0, 196618, 1245184, 0, 262154, 1245184, 0, 327690, 1245184, 0, 393226, 1245184, 0, 458762, 1245184, 0, 131083, 1245184, 0, 196619, 1245184, 0, 262155, 1245184, 0, 327691, 1245184, 0, 393227, 1245184, 0, 458763, 1245184, 0, 131084, 1179648, 0, 196620, 1245184, 0, 262156, 1245184, 0, 327692, 1245184, 0, 393228, 1245184, 0, 458764, 1245184, 0, 131085, 1245184, 0, 196621, 1245184, 0, 262157, 1245184, 0, 327693, 1245184, 0, 393229, 1245184, 0, 458765, 1245184, 0, 131086, 1245184, 0, 196622, 1245184, 0, 262158, 1245184, 0, 327694, 1245184, 0, 393230, 1245184, 0, 458766, 1245184, 0, 131087, 1179648, 0, 196623, 1245184, 0, 262159, 1245184, 0, 327695, 1245184, 0, 393231, 1245184, 0, 458767, 1179648, 0, 131088, 1245184, 0, 196624, 1245184, 0, 262160, 1245184, 0, 327696, 1245184, 0, 393232, 1245184, 0, 458768, 1245184, 0, 131089, 1245184, 0, 196625, 1245184, 0, 262161, 1245184, 0, 327697, 1245184, 0, 393233, 1245184, 0, 458769, 1245184, 0, 131090, 1179648, 0, 196626, 1245184, 0, 262162, 1245184, 0, 327698, 1245184, 0, 393234, 1245184, 0, 458770, 1179648, 0, 131091, 1245184, 0, 196627, 1245184, 0, 262163, 1245184, 0, 327699, 1245184, 0, 393235, 1245184, 0, 458771, 1245184, 0, 131092, 1245184, 0, 196628, 1245184, 0, 262164, 1245184, 0, 327700, 1245184, 0, 393236, 1245184, 0, 458772, 1245184, 0, 262165, 1245184, 0, 327701, 1245184, 0, 393237, 1245184, 0, 458773, 1179648, 0, 524289, 589824, 0, 524290, 655360, 0, 524291, 655360, 0, 524292, 655360, 0, 524293, 655360, 0, 524294, 655360, 0, 524295, 655360, 0, 524296, 655360, 0, 524297, 1376256, 0, 524298, 1245184, 0, 524299, 1310720, 0, 524300, 655360, 0, 524301, 655360, 0, 524302, 655360, 0, 524303, 655360, 0, 524304, 655360, 0, 524305, 655360, 0, 524306, 655360, 0, 524307, 655360, 0, 524308, 655360, 0, 524309, 720896, 0, 458752, 1048576, 0, 131093, 1179648, 0, 196629, 1245184, 0, 262166, 1245184, 0, 393238, 786432, 0, 458774, 917504, 0, 327702, 1310720, 0, 327704, 1376256, 0, 327703, 655360, 0, 393240, 983040, 0, 458776, 1048576, 0, -131047, 65536, 0, -65511, 131072, 0, 25, 1245184, 0, 65561, 1245184, 0, 131097, 1245184, 0, 196633, 1245184, 0, 262169, 1245184, 0, 524313, 1245184, 0, 589849, 1245184, 0, -131046, 524288, 0, -65510, 458752, 0, 26, 1245184, 0, 65562, 1245184, 0, 131098, 1245184, 0, 196634, 1245184, 0, 262170, 1245184, 0, 327706, 1245184, 0, 393242, 1245184, 0, 458778, 1245184, 0, 524314, 1245184, 0, 589850, 1245184, 0, 655386, 655360, 0, -131045, 524288, 0, -65509, 458752, 0, 27, 1245184, 0, 65563, 1245184, 0, 131099, 1245184, 0, 196635, 1245184, 0, 262171, 1245184, 0, 327707, 1245184, 0, 393243, 1245184, 0, 458779, 1245184, 0, 524315, 1245184, 0, 589851, 1245184, 0, 655387, 655360, 0, -131044, 524288, 0, -65508, 458752, 0, 28, 1245184, 0, 65564, 1245184, 0, 131100, 1245184, 0, 196636, 1245184, 0, 262172, 1245184, 0, 327708, 1245184, 0, 393244, 1245184, 0, 458780, 1245184, 0, 524316, 1245184, 0, 589852, 1245184, 0, 655388, 655360, 0, -131043, 524288, 0, -65507, 458752, 0, 29, 1245184, 0, 65565, 1245184, 0, 131101, 1245184, 0, 196637, 1245184, 0, 262173, 1245184, 0, 327709, 1245184, 0, 393245, 1245184, 0, 458781, 1245184, 0, 524317, 1245184, 0, 589853, 1245184, 0, 655389, 655360, 0, -131042, 524288, 0, -65506, 458752, 0, 30, 1245184, 0, 65566, 1245184, 0, 131102, 1245184, 0, 196638, 1245184, 0, 262174, 1245184, 0, 327710, 1245184, 0, 393246, 1245184, 0, 458782, 1245184, 0, 524318, 1245184, 0, 589854, 1245184, 0, 655390, 655360, 0, -131041, 524288, 0, -65505, 458752, 0, 31, 1245184, 0, 65567, 1245184, 0, 131103, 1245184, 0, 196639, 1245184, 0, 262175, 1245184, 0, 327711, 1245184, 0, 393247, 1245184, 0, 458783, 1245184, 0, 524319, 1245184, 0, 589855, 1245184, 0, 655391, 655360, 0, -131040, 524288, 0, -65504, 458752, 0, 32, 1245184, 0, 65568, 1245184, 0, 131104, 1245184, 0, 196640, 1245184, 0, 262176, 1245184, 0, 327712, 1245184, 0, 393248, 1245184, 0, 458784, 1245184, 0, 524320, 1245184, 0, 589856, 1245184, 0, 655392, 655360, 0, -131039, 524288, 0, -65503, 458752, 0, 33, 1245184, 0, 65569, 1245184, 0, 131105, 1245184, 0, 196641, 1245184, 0, 262177, 1245184, 0, 327713, 1245184, 0, 393249, 1245184, 0, 458785, 1245184, 0, 524321, 1245184, 0, 589857, 1245184, 0, 655393, 655360, 0, -131038, 524288, 0, -65502, 458752, 0, 34, 1245184, 0, 65570, 1245184, 0, 131106, 1245184, 0, 196642, 1245184, 0, 262178, 1245184, 0, 327714, 1245184, 0, 393250, 1245184, 0, 458786, 1245184, 0, 524322, 1245184, 0, 589858, 1245184, 0, 655394, 655360, 0, -131037, 524288, 0, -65501, 458752, 0, 35, 1245184, 0, 65571, 1245184, 0, 131107, 1245184, 0, 196643, 1245184, 0, 262179, 1245184, 0, 327715, 1245184, 0, 393251, 1245184, 0, 458787, 1245184, 0, 524323, 1245184, 0, 589859, 1245184, 0, 655395, 655360, 0, -131036, 524288, 0, -65500, 458752, 0, 36, 1245184, 0, 65572, 1245184, 0, 131108, 1245184, 0, 196644, 1245184, 0, 262180, 1245184, 0, 327716, 1245184, 0, 393252, 1245184, 0, 458788, 1245184, 0, 524324, 1245184, 0, 589860, 1245184, 0, -131048, 1114112, 0, -65512, 983040, 0, 24, 983040, 0, 65560, 1507328, 0, 131096, 262144, 0, 196632, 196608, 0, 262168, 1245184, 0, 524312, 1114112, 0, 589848, 1048576, 0, 327705, 1245184, 0, 393241, 1245184, 0, 458777, 1245184, 0, 655385, 589824, 0, 196631, 458752, 0, 131095, 524288, 0, 262167, 1245184, 0, -327651, 1245184, 0, -327650, 1179648, 0, -393186, 1245184, 0, -393185, 1245184, 0, -458721, 1245184, 0, -393184, 1245184, 0, -458720, 1245184, 0, -327648, 1179648, 0, -327649, 1245184, 0, -393187, 1245184, 0, -458723, 1245184, 0, -655324, 262144, 0, -655325, 524288, 0, -655326, 524288, 0, -655327, 524288, 0, -655328, 524288, 0, -655329, 524288, 0, -655330, 524288, 0, -655331, 524288, 0, -655332, 524288, 0, -655333, 524288, 0, -655334, 524288, 0, -589788, 196608, 0, -589789, 458752, 0, -589790, 458752, 0, -589791, 458752, 0, -589792, 458752, 0, -589793, 458752, 0, -589794, 458752, 0, -589795, 458752, 0, -589796, 458752, 0, -589797, 458752, 0, -589798, 458752, 0, -589799, 458752, 0, -655335, 524288, 0, -589800, 458752, 0, -655336, 524288, 0, -589801, 131072, 0, -655337, 65536, 0, -524265, 1179648, 0, -524264, 1245184, 0, -524263, 1245184, 0, -524262, 1245184, 0, -524261, 1179648, 0, -524260, 1245184, 0, -524259, 1245184, 0, -524258, 1179648, 0, -524257, 1245184, 0, -524256, 1179648, 0, -524255, 1245184, 0, -524254, 1245184, 0, -524253, 1245184, 0, -524252, 1179648, 0, -458729, 1245184, 0, -393193, 1245184, 0, -327657, 1179648, 0, -458728, 1245184, 0, -393192, 1245184, 0, -327656, 1245184, 0, -458727, 1245184, 0, -393191, 1245184, 0, -327655, 1245184, 0, -458726, 1245184, 0, -393190, 1245184, 0, -327654, 1245184, 0, -458725, 1245184, 0, -393189, 1245184, 0, -327653, 1179648, 0, -458724, 1245184, 0, -393188, 1245184, 0, -327652, 1245184, 0, -458722, 1245184, 0, -458719, 1245184, 0, -393183, 1245184, 0, -327647, 1245184, 0, -458718, 1245184, 0, -393182, 1245184, 0, -327646, 1245184, 0, -458717, 1245184, 0, -393181, 1245184, 0, -327645, 1245184, 0, -458716, 1245184, 0, -393180, 1245184, 0, -327644, 1179648, 0, -262121, 589824, 0, -262108, 720896, 0, -262109, 655360, 0, -262110, 655360, 0, -262111, 655360, 0, -262112, 655360, 0, -262113, 655360, 0, -262114, 655360, 0, -262115, 655360, 0, -262116, 655360, 0, -262117, 655360, 0, -262118, 655360, 0, -262119, 655360, 0, -262120, 655360, 0, -524251, 786432, 0, -458715, 786432, 0, -655323, 851968, 0, -589787, 786432, 0, -393179, 786432, 0, -327643, 917504, 0, -655338, 1114112, 0, -589802, 983040, 0, -524266, 983040, 0, -458730, 983040, 0, -393194, 983040, 0, -327658, 1048576, 0, 1310720, 1114112, 0, 1376256, 983040, 0, 1441792, 983040, 0, 1507328, 983040, 0, 1572864, 983040, 0, 1638400, 983040, 0, 1703936, 983040, 0, 1769472, 1048576, 0, 1310721, 65536, 0, 1376257, 131072, 0, 1441793, 1179648, 0, 1507329, 1245184, 0, 1572865, 1245184, 0, 1638401, 1245184, 0, 1703937, 1245184, 0, 1769473, 1179648, 0, 1835009, 589824, 0, 1310722, 524288, 0, 1376258, 458752, 0, 1441794, 1245184, 0, 1507330, 1245184, 0, 1572866, 1245184, 0, 1638402, 1245184, 0, 1703938, 1245184, 0, 1769474, 1245184, 0, 1835010, 655360, 0, 1310723, 524288, 0, 1376259, 458752, 0, 1441795, 1245184, 0, 1507331, 1245184, 0, 1572867, 1245184, 0, 1638403, 1245184, 0, 1703939, 1245184, 0, 1769475, 1245184, 0, 1835011, 655360, 0, 1310724, 524288, 0, 1376260, 458752, 0, 1441796, 1179648, 0, 1507332, 1245184, 0, 1572868, 1245184, 0, 1638404, 1245184, 0, 1703940, 1245184, 0, 1769476, 1179648, 0, 1835012, 655360, 0, 1310725, 524288, 0, 1376261, 458752, 0, 1441797, 1245184, 0, 1507333, 1245184, 0, 1572869, 1245184, 0, 1638405, 1245184, 0, 1703941, 1245184, 0, 1769477, 1245184, 0, 1835013, 655360, 0, 1310726, 524288, 0, 1376262, 458752, 0, 1441798, 1245184, 0, 1507334, 1245184, 0, 1572870, 1245184, 0, 1638406, 1245184, 0, 1703942, 1245184, 0, 1769478, 1245184, 0, 1835014, 655360, 0, 1310727, 524288, 0, 1376263, 458752, 0, 1441799, 1179648, 0, 1507335, 1245184, 0, 1572871, 1245184, 0, 1638407, 1245184, 0, 1703943, 1245184, 0, 1769479, 1179648, 0, 1835015, 655360, 0, 1310728, 524288, 0, 1376264, 458752, 0, 1441800, 1245184, 0, 1507336, 1245184, 0, 1572872, 1245184, 0, 1638408, 1245184, 0, 1703944, 1245184, 0, 1769480, 1245184, 0, 1835016, 655360, 0, 1310729, 262144, 0, 1376265, 196608, 0, 1441801, 1245184, 0, 1507337, 1245184, 0, 1572873, 1245184, 0, 1638409, 1245184, 0, 1703945, 1245184, 0, 1769481, 1245184, 0, 1835017, 655360, 0, 1310730, 1245184, 0, 1376266, 1245184, 0, 1441802, 1179648, 0, 1507338, 1245184, 0, 1572874, 1245184, 0, 1638410, 1245184, 0, 1703946, 1245184, 0, 1769482, 1245184, 0, 1835018, 655360, 0, 1310731, 65536, 0, 1376267, 131072, 0, 1441803, 1245184, 0, 1507339, 1245184, 0, 1572875, 1245184, 0, 1638411, 1245184, 0, 1703947, 1245184, 0, 1769483, 1245184, 0, 1835019, 655360, 0, 1310732, 524288, 0, 1376268, 458752, 0, 1441804, 1179648, 0, 1507340, 1245184, 0, 1572876, 1245184, 0, 1638412, 1245184, 0, 1703948, 1245184, 0, 1769484, 1245184, 0, 1835020, 655360, 0, 1310733, 524288, 0, 1376269, 458752, 0, 1441805, 1245184, 0, 1507341, 1245184, 0, 1572877, 1245184, 0, 1638413, 1245184, 0, 1703949, 1245184, 0, 1769485, 1245184, 0, 1835021, 655360, 0, 1310734, 524288, 0, 1376270, 458752, 0, 1441806, 1245184, 0, 1507342, 1245184, 0, 1572878, 1245184, 0, 1638414, 1245184, 0, 1703950, 1245184, 0, 1769486, 1245184, 0, 1835022, 655360, 0, 1310735, 524288, 0, 1376271, 458752, 0, 1441807, 1179648, 0, 1507343, 1245184, 0, 1572879, 1245184, 0, 1638415, 1245184, 0, 1703951, 1245184, 0, 1769487, 1179648, 0, 1835023, 655360, 0, 1310736, 524288, 0, 1376272, 458752, 0, 1441808, 1245184, 0, 1507344, 1245184, 0, 1572880, 1245184, 0, 1638416, 1245184, 0, 1703952, 1245184, 0, 1769488, 1245184, 0, 1835024, 655360, 0, 1310737, 524288, 0, 1376273, 458752, 0, 1441809, 1245184, 0, 1507345, 1245184, 0, 1572881, 1245184, 0, 1638417, 1245184, 0, 1703953, 1245184, 0, 1769489, 1245184, 0, 1835025, 655360, 0, 1310738, 524288, 0, 1376274, 458752, 0, 1441810, 1179648, 0, 1507346, 1245184, 0, 1572882, 1245184, 0, 1638418, 1245184, 0, 1703954, 1245184, 0, 1769490, 1179648, 0, 1835026, 655360, 0, 1310739, 524288, 0, 1376275, 458752, 0, 1441811, 1245184, 0, 1507347, 1245184, 0, 1572883, 1245184, 0, 1638419, 1245184, 0, 1703955, 1245184, 0, 1769491, 1245184, 0, 1835027, 655360, 0, 1310740, 524288, 0, 1376276, 458752, 0, 1441812, 1245184, 0, 1507348, 1245184, 0, 1572884, 1245184, 0, 1638420, 1245184, 0, 1703956, 1245184, 0, 1769492, 1245184, 0, 1835028, 655360, 0, 1310741, 262144, 0, 1376277, 196608, 0, 1441813, 1179648, 0, 1507349, 1245184, 0, 1572885, 1245184, 0, 1638421, 1245184, 0, 1703957, 1245184, 0, 1769493, 1179648, 0, 1835029, 720896, 0, 1310742, 851968, 0, 1376278, 786432, 0, 1441814, 786432, 0, 1507350, 786432, 0, 1572886, 786432, 0, 1638422, 786432, 0, 1703958, 786432, 0, 1769494, 917504, 0, 589834, 1245184, 0, 655370, 1245184, 0, 720906, 1245184, 0, 786442, 1245184, 0, 851978, 1245184, 0, 917514, 1245184, 0, 983050, 1245184, 0, 1048586, 1245184, 0, 1114122, 1245184, 0, 1179658, 1245184, 0, 589835, 786432, 0, 655371, 786432, 0, 720907, 786432, 0, 786443, 786432, 0, 851979, 786432, 0, 917515, 786432, 0, 983051, 786432, 0, 1179659, 786432, 0, 1048587, 786432, 0, 1114123, 786432, 0, 1245195, 1441792, 0, 1245193, 1507328, 0, 1179657, 983040, 0, 1114121, 983040, 0, 1048585, 983040, 0, 983049, 983040, 0, 917513, 983040, 0, 851977, 983040, 0, 786441, 983040, 0, 720905, 983040, 0, 655369, 983040, 0, 589833, 983040, 0, 1245194, 1245184, 0, -131035, 524288, 0, -65499, 458752, 0, -131034, 524288, 0, -65498, 458752, 0, -131033, 524288, 0, -65497, 458752, 0, -131032, 524288, 0, -65496, 458752, 0, -131031, 524288, 0, -65495, 458752, 0, -131030, 524288, 0, -65494, 458752, 0, -131029, 524288, 0, -65493, 458752, 0, -131028, 524288, 0, -65492, 458752, 0, -131027, 851968, 0, -65491, 786432, 0, 45, 786432, 0, 65581, 786432, 0, 131117, 786432, 0, 196653, 786432, 0, 262189, 786432, 0, 327725, 786432, 0, 393261, 786432, 0, 458797, 786432, 0, 589869, 917504, 0, 524333, 786432, 0, 655396, 655360, 0, 655397, 655360, 0, 655398, 655360, 0, 655399, 655360, 0, 655400, 655360, 0, 655401, 655360, 0, 655402, 655360, 0, 655403, 655360, 0, 655404, 720896, 0, 65573, 1245184, 0, 131110, 1245184, 0, 196647, 1245184, 0, 262184, 1245184, 0, 327721, 1245184, 0, 393258, 1245184, 0, 37, 1245184, 0, 131109, 1245184, 0, 196645, 1245184, 0, 262181, 1245184, 0, 327717, 1245184, 0, 393253, 1245184, 0, 458789, 1245184, 0, 524325, 1245184, 0, 589861, 1245184, 0, 38, 1245184, 0, 65574, 1245184, 0, 196646, 1245184, 0, 262182, 1245184, 0, 327718, 1245184, 0, 393254, 1245184, 0, 458790, 1245184, 0, 524326, 1245184, 0, 589862, 1245184, 0, 39, 1245184, 0, 65575, 1245184, 0, 131111, 1245184, 0, 262183, 1245184, 0, 327719, 1245184, 0, 393255, 1245184, 0, 458791, 1245184, 0, 524327, 1245184, 0, 589863, 1245184, 0, 40, 1245184, 0, 65576, 1245184, 0, 131112, 1245184, 0, 196648, 1245184, 0, 327720, 1245184, 0, 393256, 1245184, 0, 458792, 1245184, 0, 524328, 1245184, 0, 589864, 1245184, 0, 41, 1245184, 0, 65577, 1245184, 0, 131113, 1245184, 0, 196649, 1245184, 0, 262185, 1245184, 0, 393257, 1245184, 0, 458793, 1245184, 0, 524329, 1245184, 0, 589865, 1245184, 0, 42, 1245184, 0, 65578, 1245184, 0, 131114, 1245184, 0, 196650, 1245184, 0, 262186, 1245184, 0, 327722, 1245184, 0, 458794, 1245184, 0, 524330, 1245184, 0, 589866, 1245184, 0, 43, 1245184, 0, 65579, 1245184, 0, 131115, 1245184, 0, 196651, 1245184, 0, 262187, 1245184, 0, 327723, 1245184, 0, 393259, 1245184, 0, 458795, 1245184, 0, 524331, 1245184, 0, 589867, 1245184, 0, 44, 1245184, 0, 65580, 1245184, 0, 131116, 1245184, 0, 196652, 1245184, 0, 262188, 1245184, 0, 327724, 1245184, 0, 393260, 1245184, 0, 458796, 1245184, 0, 524332, 1245184, 0, 589868, 1245184, 0)
layer_1/name = "wires"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 524290, 0, 327708, 65538, 0, 262172, 65538, 0, 196636, 65538, 0, 131100, 131074, 0, 131099, 2, 0, 131098, 2, 0, 131097, 458754, 0, 196633, 524290, 0, 65564, 196610, 0, 28, 65538, 0, 65565, 2, 0, 65566, 2, 0, 65567, 524290, 0, 131102, 655362, 0, 131101, 2, 0, 196638, 65538, 0, 262174, 65538, 0, 327710, 65538, 0, 393246, 65538, 0, 458782, 65538, 0, 524318, 65538, 0, 589854, 589826, 0, 1376260, 2, 0, 1376259, 2, 0, 1376258, 2, 0, 1376261, 655362, 0, 1376257, 458754, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 524290, 0, 589864, 589826, 0, 589865, 2, 0, 589866, 2, 0, 589867, 2, 0, 524324, 524290, 0, 327717, 524290, 0, 393255, 589826, 0, 458786, 589826, 0, 327718, 589826, 0, 327719, 655362, 0, 262182, 655362, 0, 458787, 655362, 0, 524322, 655362, 0, 262178, 655362, 0, 327714, 65538, 0, 393250, 65538, 0, 262176, 458754, 0, 262177, 2, 0, 327712, 65538, 0, 393248, 65538, 0, 458784, 65538, 0, 524320, 589826, 0, 524321, 2, 0, 524323, 589826, 0, 458788, 65538, 0, 393252, 65538, 0, 327716, 458754, 0, 262181, 458754, 0, 393256, 655362, 0, 458792, 65538, 0, 524328, 65538, 0)

[node name="items" type="Node2D" parent="."]
z_index = 1

[node name="itemResource" type="Position2D" parent="items"]
position = Vector2(184, 32)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("4_b4gcv")
Status = PackedStringArray("locked")

[node name="itemResource8" type="Position2D" parent="items"]
position = Vector2(80, 64)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("4_b4gcv")
Status = PackedStringArray("locked")

[node name="itemResource9" type="Position2D" parent="items"]
position = Vector2(80, 168)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("4_b4gcv")
Status = PackedStringArray("locked")

[node name="itemResource11" type="Position2D" parent="items"]
position = Vector2(8, 216)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("4_b4gcv")
Status = PackedStringArray()

[node name="itemResource12" type="Position2D" parent="items"]
position = Vector2(56, 184)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("10_avjfs")
Status = PackedStringArray("light")
makeRigid = true

[node name="itemResource13" type="Position2D" parent="items"]
position = Vector2(56, 200)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("10_avjfs")
Status = PackedStringArray()
makeRigid = true

[node name="itemResource14" type="Position2D" parent="items"]
position = Vector2(152, 176)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("10_avjfs")
Status = PackedStringArray("heavy")
makeRigid = true

[node name="itemResource16" type="Position2D" parent="items"]
position = Vector2(152, 184)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("10_avjfs")
Status = PackedStringArray("heavy")
makeRigid = true

[node name="itemResource17" type="Position2D" parent="items"]
position = Vector2(152, 192)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("10_avjfs")
Status = PackedStringArray("heavy")
makeRigid = true

[node name="itemResource2" type="Position2D" parent="items" groups=["teleporterA"]]
position = Vector2(134, 32)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("6_ho341")
Status = PackedStringArray("weak")

[node name="itemResource3" type="Position2D" parent="items" groups=["teleporterB"]]
position = Vector2(216, 31)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("6_ho341")
Status = PackedStringArray("weak")

[node name="itemResource4" type="Position2D" parent="items" groups=["teleporter0B"]]
position = Vector2(248, 0)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("6_ho341")
Status = PackedStringArray("weak")

[node name="itemResource5" type="Position2D" parent="items" groups=["teleporter0A"]]
position = Vector2(248, -64)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("6_ho341")
Status = PackedStringArray("broken")

[node name="itemResource6" type="Position2D" parent="items" groups=["teleporter1A"]]
position = Vector2(352, 72)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("6_ho341")
Status = PackedStringArray("weak")

[node name="itemResource10" type="Position2D" parent="items" groups=["teleporter1B"]]
position = Vector2(168, 176)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("6_ho341")
Status = PackedStringArray()

[node name="itemResource7" type="Position2D" parent="items"]
position = Vector2(40, 176)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("12_lmhi6")
Status = PackedStringArray()

[node name="itemResource15" type="Position2D" parent="items" groups=["INP_itemResource7", "OUT_itemResource11"]]
position = Vector2(8, 176)
script = ExtResource("3_n54hw")
HeldResource = ExtResource("13_4pdc5")
Status = PackedStringArray("nand")
